# gspread-orm

./: .pre-commit-config.yaml  README.md  pyproject.toml
gspread_orm/: __init__.py  models.py
tests/: test_models.py
