[tool.poetry]
name = "gspread-orm"
version = "0.1.1"
description = ""
authors = ["Roberto Alamos <ralamosm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.11.1"
pydantic = "^2.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
mock = "^5.1.0"
pre-commit = "^3.4.0"
icecream = "^2.1.3"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
